<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">微任务</string>
    <string name="app_display">MicroTask</string>
	<string name="content_description">Image</string>

    <string name="action_titlebar_save">保存</string>
    <string name="action_titlebar_back">返回</string>
    <string name="action_titlebar_title">详细信息</string>
    
    <!-- Login -->
    <!-- ProjectListActivity -->
    <string name="project_list_context_menu_header_title">项目操作</string>
    <string name="project_list_context_menu0_name">删除项目</string>
    <string name="project_list_context_menu1_name">详细信息</string>
    <string name="project_list_dialog_message">确认删除项目%s吗？</string>
    <string name="project_list_dialog_title">提示</string>
    <string name="project_list_dialog_ok_button">确认</string>
    <string name="project_list_dialog_cancel_button">取消</string>
    <string name="context_menu_create_project">新建项目</string>
    <string name="context_menu_refresh_project_list">刷新项目列表</string>
    <string name="project_list_fail_to_load_projects">无法获取最新的项目列表</string>
    <string name="project_list_fail_to_del_project">删除项目失败</string>
    <string name="project_list_title">项目列表</string>
    
    <!-- ProjectDetailActivity -->
    <string name="project_detail_label_project_id">项目编号</string>
    <string name="project_detail_label_project_name">项目名称</string>
    <string name="project_detail_label_project_desc">项目说明</string>
    <string name="project_detail_label_project_user">创建用户</string>
    <string name="project_detail_label_project_time">创建日期</string>
    <string name="project_detail_dialog_title_project_name">项目名称</string>
    <string name="project_detail_dialog_title_project_desc">项目说明</string>
    <string name="project_detail_dialog_ok_button">确认</string>
    <string name="project_detail_dialog_cancel_button">取消</string>
    <string name="project_detail_fail_to_save_project">无法保存更改</string>

    <!-- TaskListActivity -->
    <string name="context_menu_create_task">新建任务</string>
    <string name="context_menu_uncomplete_task">未完成任务列表</string>
    <string name="context_menu_refresh_task_list">刷新任务列表</string>
    <string name="task_list_context_menu_header_title">任务操作</string>
    <string name="task_list_context_menu0_name">删除任务</string>
    <string name="task_list_fail_to_retrieve_tasks">无法加载任务列表</string>
    <string name="task_list_dialog_message">确认删除选中的任务吗？</string>
    <string name="task_list_dialog_title">提示</string>
    <string name="task_list_dialog_ok_button">确认</string>
    <string name="task_list_dialog_cancel_button">取消</string>    
    <string name="task_list_fail_to_del_task">删除任务失败</string>
    <string name="task_list_title">任务列表</string>

    <!-- TaskDetailActivity -->
    <string name="task_detail_label_task_id">任务编号</string>
    <string name="task_detail_label_task_content">任务内容</string>
    <string name="task_detail_label_task_status">任务状态</string>
    <string name="task_detail_label_create_user">创建用户</string>
    <string name="task_detail_label_assign_user">分派用户</string>
    <string name="task_detail_label_create_time">创建日期</string>
    <string name="task_detail_label_update_time">更新日期</string>
    <string name="task_detail_label_task_priority">优先等级</string>
    <string name="task_detail_label_expect_date">期望日期</string>
    <string name="task_detail_fail_to_save_task">无法保存更改</string>
    <string name="task_detail_dialog_title_task_status">任务状态</string>
    <string name="task_detail_dialog_title_task_content">任务内容</string>
    <string name="task_detail_dialog_title_create_user">创建用户</string>
    <string name="task_detail_dialog_title_assign_user">分派用户</string>
    <string name="task_detail_dialog_title_task_priority">任务优先级</string>
    <string name="task_detail_dialog_ok_button">确认</string>
    <string name="task_detail_dialog_cancel_button">取消</string>

    
    <string name="title_activity_project_list">项目列表</string>
    <string name="title_activity_project_detail">项目信息</string>
    <string name="title_activity_task_detail">任务信息</string>
    <string name="label_task_id">任务编号</string>
    <string name="label_task_status">任务状态</string>
    <string name="label_task_content">任务内容</string>
    <string name="label_assigned_to">任务分派</string>
    <string name="label_title">头衔</string>
    <string name="label_create_time">创建时间</string>
    <string name="label_priority">优先级  </string>
    <string name="label_expected_complete_date">期望完成时间</string>
    <string name="image_view_disc">image_disc</string>

</resources>
