<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#c0c0c0"
    tools:context=".TaskListActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner" >

            <TableRow
                android:id="@+id/tr_task_detail_task_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dip" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1.0"
                    android:gravity="left|center_vertical"
                    android:text="@string/task_detail_label_task_id"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/task_detail_label_task_id"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="9.0"
                    android:gravity="right|center_vertical"
                    android:paddingRight="2dp"
                    android:text="@string/task_detail_label_task_id"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="13dip"
                    android:layout_height="13dip"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/right_arrow"
                    android:visibility="invisible" />
            </TableRow>

            <View
                android:layout_height="0.5dip"
                android:background="#303030" />

            <TableRow
                android:id="@+id/tr_task_detail_task_status"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:padding="10dip" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1.0"
                    android:gravity="left|center_vertical"
                    android:text="@string/label_task_status"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/task_detail_label_task_status"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="9.0"
                    android:gravity="right|center_vertical"
                    android:paddingRight="2dp"
                    android:text="@string/task_detail_label_task_status"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="13dip"
                    android:layout_height="13dip"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/right_arrow" />
            </TableRow>

            <View
                android:layout_height="0.5dip"
                android:background="#303030" />

            <TableRow
                android:id="@+id/tr_task_detail_task_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:padding="10dip" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1.0"
                    android:gravity="left|center_vertical"
                    android:text="@string/task_detail_label_task_content"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/task_detail_label_task_content"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:paddingRight="2dp"
                    android:text="@string/task_detail_label_task_content"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="13dip"
                    android:layout_height="13dip"
                    android:contentDescription="@string/image_view_disc"
                    android:src="@drawable/right_arrow" />
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center_vertical" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner" >

            <TableRow
                android:id="@+id/tr_task_detail_create_user"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:padding="10dip" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1.0"
                    android:gravity="left|center_vertical"
                    android:text="@string/task_detail_label_create_user"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/task_detail_label_create_user"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="9.0"
                    android:gravity="right|center_vertical"
                    android:paddingRight="2dp"
                    android:text="@string/task_detail_label_create_user"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="13dip"
                    android:layout_height="13dip"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/right_arrow" />
            </TableRow>

            <View
                android:layout_height="0.5dip"
                android:background="#303030" />

            <TableRow
                android:id="@+id/tr_task_detail_assign_user"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dip" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1.0"
                    android:gravity="left|center_vertical"
                    android:text="@string/task_detail_label_assign_user"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/task_detail_label_assign_user"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="9.0"
                    android:gravity="right|center_vertical"
                    android:paddingRight="2dp"
                    android:text="@string/task_detail_label_assign_user"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="13dip"
                    android:layout_height="13dip"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/right_arrow"
                    android:visibility="visible" />
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center_vertical" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner" >

            <TableRow
                android:id="@+id/tr_task_detail_create_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dip" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="left|center_vertical"
                    android:text="@string/task_detail_label_create_time"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/task_detail_label_create_time"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:paddingRight="2dp"
                    android:text="@string/task_detail_label_create_time"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="13dip"
                    android:layout_height="13dip"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/right_arrow"
                    android:visibility="invisible" />
            </TableRow>

            <View
                android:layout_height="0.5dip"
                android:background="#303030" />

            <TableRow
                android:id="@+id/tr_task_detail_update_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dip" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="left|center_vertical"
                    android:text="@string/task_detail_label_update_time"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/task_detail_label_update_time"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:paddingRight="2dp"
                    android:text="@string/task_detail_label_update_time"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="13dip"
                    android:layout_height="13dip"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/right_arrow"
                    android:visibility="visible" />
            </TableRow>

            <View
                android:layout_height="0.5dip"
                android:background="#303030" />

            <TableRow
                android:id="@+id/tr_task_detail_task_priority"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:padding="10dip" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1.0"
                    android:gravity="left|center_vertical"
                    android:text="@string/task_detail_label_task_priority"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/task_detail_label_task_priority"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="9.0"
                    android:gravity="right|center_vertical"
                    android:paddingRight="2dp"
                    android:text="@string/task_detail_label_task_priority"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="13dip"
                    android:layout_height="13dip"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/right_arrow" />
            </TableRow>

            <View
                android:layout_height="0.5dip"
                android:background="#303030" />

            <TableRow
                android:id="@+id/tr_task_detail_expect_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:padding="10dip" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="left|center_vertical"
                    android:text="@string/task_detail_label_expect_date"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/task_detail_label_except_date"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:paddingRight="2dp"
                    android:text="@string/task_detail_label_expect_date"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="13dip"
                    android:layout_height="13dip"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/right_arrow" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</RelativeLayout>