<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#c0c0c0"
    tools:context=".ProjectListActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner" >

            <TableRow
                android:id="@+id/tr_project_detail_project_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1.0"
                    android:gravity="left|center_vertical"
                    android:text="@string/project_detail_label_project_id"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/project_detail_label_project_id"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="9.0"
                    android:gravity="right|center_vertical"
                    android:paddingRight="2dp"
                    android:text="@string/project_detail_label_project_id"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="13dip"
                    android:layout_height="13dip"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/right_arrow"
                    android:visibility="invisible" />
            </TableRow>

            <View
                android:layout_height="0.5dip"
                android:background="#303030" />

            <TableRow
                android:id="@+id/tr_project_detail_project_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:padding="10dip" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1.0"
                    android:gravity="left|center_vertical"
                    android:text="@string/project_detail_label_project_name"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/project_detail_label_project_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="9.0"
                    android:gravity="right|center_vertical"
                    android:paddingRight="2dp"
                    android:text="@string/project_detail_label_project_name"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="13dip"
                    android:layout_height="13dip"
                    android:contentDescription="@string/image_view_disc"
                    android:src="@drawable/right_arrow"
                    android:visibility="invisible" />
            </TableRow>

            <View
                android:layout_height="0.5dip"
                android:background="#303030" />

            <TableRow
                android:id="@+id/tr_project_detail_project_desc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:padding="10dip" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1.0"
                    android:gravity="left|center_vertical"
                    android:text="@string/project_detail_label_project_desc"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/project_detail_label_project_desc"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="9.0"
                    android:gravity="right|center_vertical"
                    android:paddingRight="2dp"
                    android:text="@string/project_detail_label_project_desc"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="13dip"
                    android:layout_height="13dip"
                    android:contentDescription="@string/image_view_disc"
                    android:src="@drawable/right_arrow"
                    android:visibility="visible" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/blank1"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center_vertical" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner" >

            <TableRow
                android:id="@+id/tr_project_detail_project_user"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:padding="10dip" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1.0"
                    android:gravity="left|center_vertical"
                    android:text="@string/project_detail_label_project_user"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/project_detail_label_project_user"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="9.0"
                    android:gravity="right|center_vertical"
                    android:paddingRight="2dp"
                    android:text="@string/project_detail_label_project_user"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="13dip"
                    android:layout_height="13dip"
                    android:contentDescription="@string/image_view_disc"
                    android:src="@drawable/right_arrow"
                    android:visibility="invisible" />
            </TableRow>

            <View
                android:layout_height="0.5dip"
                android:background="#303030" />

            <TableRow
                android:id="@+id/tr_project_detail_project_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dip" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1.0"
                    android:gravity="left|center_vertical"
                    android:text="@string/project_detail_label_project_time"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/project_detail_label_project_time"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="9.0"
                    android:gravity="right|center_vertical"
                    android:paddingRight="2dp"
                    android:text="@string/project_detail_label_project_time"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="13dip"
                    android:layout_height="13dip"
                    android:contentDescription="@string/image_view_disc"
                    android:src="@drawable/right_arrow"
                    android:visibility="invisible" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</RelativeLayout>